--- a/sat-smt-by-example.cabal
+++ b/sat-smt-by-example.cabal
@@ -3,7 +3,7 @@ cabal-version:       >=1.10
 -- 'cabal init'.  For further documentation, see
 -- http://haskell.org/cabal/users-guide/
 
-name:                sat-smt-by-example
+name:                sat-smt
 version:             0.1.0.0
 -- synopsis:
 -- description:
@@ -23,4 +23,12 @@ library
   -- other-extensions:
   build-depends:       base >=4.13 && <4.14, z3
   hs-source-dirs:      src
+  default-language:    Haskell2010
+
+executable app
+  main-is:             Main.hs
+  -- other-modules:       MyLib
+  -- other-extensions:
+  build-depends:       base >=4.13 && <4.14, z3, sat-smt
+  hs-source-dirs:      app
   default-language:    Haskell2010
