--- a/sat-smt-by-example.cabal
+++ b/sat-smt-by-example.cabal
@@ -22,7 +22,7 @@ library
                      , Chap01.Equation1
   -- other-modules:
   -- other-extensions:
-  build-depends:       base >=4.13 && <4.14, z3
+  build-depends:       base >=4.13 && <4.14, containers, mtl, z3
   hs-source-dirs:      src
   default-language:    Haskell2010
 
